crates/compiler/cypress/tests/snapshots/test_parse__var_is_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "isnt\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("isnt")

[=== formatted below ===]
isnt
