crates/compiler/cypress/tests/snapshots/test_parse__var_then_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "thenever\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("thenever")

[=== formatted below ===]

