crates/compiler/cypress/tests/snapshots/test_parse__var_when_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "whenever\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("whenever")

[=== formatted below ===]

