crates/compiler/cypress/tests/snapshots/test_parse__when_field_access.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "p=when s is H->s .d\ne\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginWhen
                Ident=>LowerIdent@3
                InlineKwIs=>KwIs@4
                UpperIdent=>UpperIdent@5
                InlineWhenArrow=>OpArrow@6
                (*
                    Ident=>LowerIdent@7
                    InlineApply=>LowerIdent@7
                    FieldAccessFunction=>DotLowerIdent@8
                EndApply)
            EndWhen)
        EndAssignDecl)
        HintExpr
        Ident=>LowerIdent@9
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("p"), When(Ident("s"), [UpperIdent("H"), Apply(Ident("s"), [FieldAccessFunction(".d")])]))
Ident("e")

[=== formatted below ===]

