crates/compiler/cypress/tests/snapshots/test_parse__when_if_guard_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "when x is\n    _ ->\n        1\n\n    _ ->\n        2\n\n    Ok ->\n        3\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginWhen
            Ident=>LowerIdent@1
            InlineKwIs=>KwIs@2
            Underscore=>Underscore@3
            InlineWhenArrow=>OpArrow@4
            (BeginBlock HintExpr Num=>Int@5 EndBlock)
            Underscore=>Underscore@6
            InlineWhenArrow=>OpArrow@7
            (BeginBlock HintExpr Num=>Int@8 EndBlock)
            UpperIdent=>UpperIdent@9
            InlineWhenArrow=>OpArrow@10
            (BeginBlock HintExpr Num=>Int@11 EndBlock)
        EndWhen)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(Ident("x"), [Underscore("_"), Block([IntBase10("1")]), Underscore("_"), Block([IntBase10("2")]), UpperIdent("Ok"), Block([IntBase10("3")])])

[=== formatted below ===]

